# gen/servergrpc/moving/orders_filter.pb.go
@@ -1,0 +1,210 @@
+// Code generated by protoc-gen-go. DO NOT EDIT.
+// versions:
+// 	protoc-gen-go v1.36.1
+// 	protoc        v5.27.0
+// source: params/orders_filter.proto
+
+package servergrpc
+
+import (
+	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
+	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	timestamppb "google.golang.org/protobuf/types/known/timestamppb"
+	reflect "reflect"
+	sync "sync"
+)
+
+const (
+	// Verify that this generated code is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
+	// Verify that runtime/protoimpl is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
+)
+
+type Filter struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	OrderStatus   OrderStatus            `protobuf:"varint,1,opt,name=OrderStatus,proto3,enum=ingvarmattis.services.moving.v1.OrderStatus" json:"OrderStatus,omitempty"`
+	PropertySize  PropertySize           `protobuf:"varint,2,opt,name=PropertySize,proto3,enum=ingvarmattis.services.moving.v1.PropertySize" json:"PropertySize,omitempty"`
+	CreatedFrom   *timestamppb.Timestamp `protobuf:"bytes,3,opt,name=CreatedFrom,proto3" json:"CreatedFrom,omitempty"`
+	CreatedTo     *timestamppb.Timestamp `protobuf:"bytes,4,opt,name=CreatedTo,proto3" json:"CreatedTo,omitempty"`
+	MoveDateFrom  *timestamppb.Timestamp `protobuf:"bytes,5,opt,name=MoveDateFrom,proto3" json:"MoveDateFrom,omitempty"`
+	MoveDateTo    *timestamppb.Timestamp `protobuf:"bytes,6,opt,name=MoveDateTo,proto3" json:"MoveDateTo,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *Filter) Reset() {
+	*x = Filter{}
+	mi := &file_params_orders_filter_proto_msgTypes[0]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *Filter) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*Filter) ProtoMessage() {}
+
+func (x *Filter) ProtoReflect() protoreflect.Message {
+	mi := &file_params_orders_filter_proto_msgTypes[0]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use Filter.ProtoReflect.Descriptor instead.
+func (*Filter) Descriptor() ([]byte, []int) {
+	return file_params_orders_filter_proto_rawDescGZIP(), []int{0}
+}
+
+func (x *Filter) GetOrderStatus() OrderStatus {
+	if x != nil {
+		return x.OrderStatus
+	}
+	return OrderStatus_ORDER_STATUS_UNKNOWN
+}
+
+func (x *Filter) GetPropertySize() PropertySize {
+	if x != nil {
+		return x.PropertySize
+	}
+	return PropertySize_PROPERTY_SIZE_UNKNOWN
+}
+
+func (x *Filter) GetCreatedFrom() *timestamppb.Timestamp {
+	if x != nil {
+		return x.CreatedFrom
+	}
+	return nil
+}
+
+func (x *Filter) GetCreatedTo() *timestamppb.Timestamp {
+	if x != nil {
+		return x.CreatedTo
+	}
+	return nil
+}
+
+func (x *Filter) GetMoveDateFrom() *timestamppb.Timestamp {
+	if x != nil {
+		return x.MoveDateFrom
+	}
+	return nil
+}
+
+func (x *Filter) GetMoveDateTo() *timestamppb.Timestamp {
+	if x != nil {
+		return x.MoveDateTo
+	}
+	return nil
+}
+
+var File_params_orders_filter_proto protoreflect.FileDescriptor
+
+var file_params_orders_filter_proto_rawDesc = []byte{
+	0x0a, 0x1a, 0x70, 0x61, 0x72, 0x61, 0x6d, 0x73, 0x2f, 0x6f, 0x72, 0x64, 0x65, 0x72, 0x73, 0x5f,
+	0x66, 0x69, 0x6c, 0x74, 0x65, 0x72, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x12, 0x1f, 0x69, 0x6e,
+	0x67, 0x76, 0x61, 0x72, 0x6d, 0x61, 0x74, 0x74, 0x69, 0x73, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x69,
+	0x63, 0x65, 0x73, 0x2e, 0x6d, 0x6f, 0x76, 0x69, 0x6e, 0x67, 0x2e, 0x76, 0x31, 0x1a, 0x19, 0x70,
+	0x61, 0x72, 0x61, 0x6d, 0x73, 0x2f, 0x6f, 0x72, 0x64, 0x65, 0x72, 0x5f, 0x73, 0x74, 0x61, 0x74,
+	0x75, 0x73, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x1a, 0x1a, 0x70, 0x61, 0x72, 0x61, 0x6d, 0x73,
+	0x2f, 0x70, 0x72, 0x6f, 0x70, 0x65, 0x72, 0x74, 0x79, 0x5f, 0x73, 0x69, 0x7a, 0x65, 0x2e, 0x70,
+	0x72, 0x6f, 0x74, 0x6f, 0x1a, 0x1f, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2f, 0x70, 0x72, 0x6f,
+	0x74, 0x6f, 0x62, 0x75, 0x66, 0x2f, 0x74, 0x69, 0x6d, 0x65, 0x73, 0x74, 0x61, 0x6d, 0x70, 0x2e,
+	0x70, 0x72, 0x6f, 0x74, 0x6f, 0x22, 0x9f, 0x03, 0x0a, 0x06, 0x46, 0x69, 0x6c, 0x74, 0x65, 0x72,
+	0x12, 0x4e, 0x0a, 0x0b, 0x4f, 0x72, 0x64, 0x65, 0x72, 0x53, 0x74, 0x61, 0x74, 0x75, 0x73, 0x18,
+	0x01, 0x20, 0x01, 0x28, 0x0e, 0x32, 0x2c, 0x2e, 0x69, 0x6e, 0x67, 0x76, 0x61, 0x72, 0x6d, 0x61,
+	0x74, 0x74, 0x69, 0x73, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x73, 0x2e, 0x6d, 0x6f,
+	0x76, 0x69, 0x6e, 0x67, 0x2e, 0x76, 0x31, 0x2e, 0x4f, 0x72, 0x64, 0x65, 0x72, 0x53, 0x74, 0x61,
+	0x74, 0x75, 0x73, 0x52, 0x0b, 0x4f, 0x72, 0x64, 0x65, 0x72, 0x53, 0x74, 0x61, 0x74, 0x75, 0x73,
+	0x12, 0x51, 0x0a, 0x0c, 0x50, 0x72, 0x6f, 0x70, 0x65, 0x72, 0x74, 0x79, 0x53, 0x69, 0x7a, 0x65,
+	0x18, 0x02, 0x20, 0x01, 0x28, 0x0e, 0x32, 0x2d, 0x2e, 0x69, 0x6e, 0x67, 0x76, 0x61, 0x72, 0x6d,
+	0x61, 0x74, 0x74, 0x69, 0x73, 0x2e, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x73, 0x2e, 0x6d,
+	0x6f, 0x76, 0x69, 0x6e, 0x67, 0x2e, 0x76, 0x31, 0x2e, 0x50, 0x72, 0x6f, 0x70, 0x65, 0x72, 0x74,
+	0x79, 0x53, 0x69, 0x7a, 0x65, 0x52, 0x0c, 0x50, 0x72, 0x6f, 0x70, 0x65, 0x72, 0x74, 0x79, 0x53,
+	0x69, 0x7a, 0x65, 0x12, 0x3c, 0x0a, 0x0b, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65, 0x64, 0x46, 0x72,
+	0x6f, 0x6d, 0x18, 0x03, 0x20, 0x01, 0x28, 0x0b, 0x32, 0x1a, 0x2e, 0x67, 0x6f, 0x6f, 0x67, 0x6c,
+	0x65, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x2e, 0x54, 0x69, 0x6d, 0x65, 0x73,
+	0x74, 0x61, 0x6d, 0x70, 0x52, 0x0b, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65, 0x64, 0x46, 0x72, 0x6f,
+	0x6d, 0x12, 0x38, 0x0a, 0x09, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65, 0x64, 0x54, 0x6f, 0x18, 0x04,
+	0x20, 0x01, 0x28, 0x0b, 0x32, 0x1a, 0x2e, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2e, 0x70, 0x72,
+	0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x2e, 0x54, 0x69, 0x6d, 0x65, 0x73, 0x74, 0x61, 0x6d, 0x70,
+	0x52, 0x09, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65, 0x64, 0x54, 0x6f, 0x12, 0x3e, 0x0a, 0x0c, 0x4d,
+	0x6f, 0x76, 0x65, 0x44, 0x61, 0x74, 0x65, 0x46, 0x72, 0x6f, 0x6d, 0x18, 0x05, 0x20, 0x01, 0x28,
+	0x0b, 0x32, 0x1a, 0x2e, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f,
+	0x62, 0x75, 0x66, 0x2e, 0x54, 0x69, 0x6d, 0x65, 0x73, 0x74, 0x61, 0x6d, 0x70, 0x52, 0x0c, 0x4d,
+	0x6f, 0x76, 0x65, 0x44, 0x61, 0x74, 0x65, 0x46, 0x72, 0x6f, 0x6d, 0x12, 0x3a, 0x0a, 0x0a, 0x4d,
+	0x6f, 0x76, 0x65, 0x44, 0x61, 0x74, 0x65, 0x54, 0x6f, 0x18, 0x06, 0x20, 0x01, 0x28, 0x0b, 0x32,
+	0x1a, 0x2e, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75,
+	0x66, 0x2e, 0x54, 0x69, 0x6d, 0x65, 0x73, 0x74, 0x61, 0x6d, 0x70, 0x52, 0x0a, 0x4d, 0x6f, 0x76,
+	0x65, 0x44, 0x61, 0x74, 0x65, 0x54, 0x6f, 0x42, 0x24, 0x5a, 0x22, 0x2e, 0x2f, 0x67, 0x65, 0x6e,
+	0x2f, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x67, 0x72, 0x70, 0x63, 0x2f, 0x6d, 0x6f, 0x76, 0x69,
+	0x6e, 0x67, 0x3b, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x67, 0x72, 0x70, 0x63, 0x62, 0x06, 0x70,
+	0x72, 0x6f, 0x74, 0x6f, 0x33,
+}
+
+var (
+	file_params_orders_filter_proto_rawDescOnce sync.Once
+	file_params_orders_filter_proto_rawDescData = file_params_orders_filter_proto_rawDesc
+)
+
+func file_params_orders_filter_proto_rawDescGZIP() []byte {
+	file_params_orders_filter_proto_rawDescOnce.Do(func() {
+		file_params_orders_filter_proto_rawDescData = protoimpl.X.CompressGZIP(file_params_orders_filter_proto_rawDescData)
+	})
+	return file_params_orders_filter_proto_rawDescData
+}
+
+var file_params_orders_filter_proto_msgTypes = make([]protoimpl.MessageInfo, 1)
+var file_params_orders_filter_proto_goTypes = []any{
+	(*Filter)(nil),                // 0: ingvarmattis.services.moving.v1.Filter
+	(OrderStatus)(0),              // 1: ingvarmattis.services.moving.v1.OrderStatus
+	(PropertySize)(0),             // 2: ingvarmattis.services.moving.v1.PropertySize
+	(*timestamppb.Timestamp)(nil), // 3: google.protobuf.Timestamp
+}
+var file_params_orders_filter_proto_depIdxs = []int32{
+	1, // 0: ingvarmattis.services.moving.v1.Filter.OrderStatus:type_name -> ingvarmattis.services.moving.v1.OrderStatus
+	2, // 1: ingvarmattis.services.moving.v1.Filter.PropertySize:type_name -> ingvarmattis.services.moving.v1.PropertySize
+	3, // 2: ingvarmattis.services.moving.v1.Filter.CreatedFrom:type_name -> google.protobuf.Timestamp
+	3, // 3: ingvarmattis.services.moving.v1.Filter.CreatedTo:type_name -> google.protobuf.Timestamp
+	3, // 4: ingvarmattis.services.moving.v1.Filter.MoveDateFrom:type_name -> google.protobuf.Timestamp
+	3, // 5: ingvarmattis.services.moving.v1.Filter.MoveDateTo:type_name -> google.protobuf.Timestamp
+	6, // [6:6] is the sub-list for method output_type
+	6, // [6:6] is the sub-list for method input_type
+	6, // [6:6] is the sub-list for extension type_name
+	6, // [6:6] is the sub-list for extension extendee
+	0, // [0:6] is the sub-list for field type_name
+}
+
+func init() { file_params_orders_filter_proto_init() }
+func file_params_orders_filter_proto_init() {
+	if File_params_orders_filter_proto != nil {
+		return
+	}
+	file_params_order_status_proto_init()
+	file_params_property_size_proto_init()
+	type x struct{}
+	out := protoimpl.TypeBuilder{
+		File: protoimpl.DescBuilder{
+			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
+			RawDescriptor: file_params_orders_filter_proto_rawDesc,
+			NumEnums:      0,
+			NumMessages:   1,
+			NumExtensions: 0,
+			NumServices:   0,
+		},
+		GoTypes:           file_params_orders_filter_proto_goTypes,
+		DependencyIndexes: file_params_orders_filter_proto_depIdxs,
+		MessageInfos:      file_params_orders_filter_proto_msgTypes,
+	}.Build()
+	File_params_orders_filter_proto = out.File
+	file_params_orders_filter_proto_rawDesc = nil
+	file_params_orders_filter_proto_goTypes = nil
+	file_params_orders_filter_proto_depIdxs = nil
+}
